--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 4rem;
+    background-image: url("https://gdartes.com.br/wp-content/uploads/2022/02/Como-estudar-os-Fundamentos-do-Desenho.jpeg");
+    background-size: cover;
+    width: 100vw;
+    height: 100vh;
 }
 
 .content{
