--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 4rem;
-    background-image: url("https://gdartes.com.br/wp-content/uploads/2022/02/Como-estudar-os-Fundamentos-do-Desenho.jpeg");
+    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20190903/pngtree-color-purple-fog-background-abstract-smoke-image_313029.jpg");
     background-size: cover;
     width: 100vw;
     height: 100vh;
