--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 4rem;
-    background-image: url("https://png.pngtree.com/thumb_back/fh260/background/20190903/pngtree-color-purple-fog-background-abstract-smoke-image_313029.jpg");
+    background-image: url("https://i.pinimg.com/originals/e2/7d/43/e27d43641f2f16cfca9790f52309fd8a.jpg");
     background-size: cover;
     width: 100vw;
     height: 100vh;
