--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 4rem;
-    background-image: url("https://i.pinimg.com/originals/e2/7d/43/e27d43641f2f16cfca9790f52309fd8a.jpg");
+    background-image: url("https://img.freepik.com/vetores-premium/paisagem-do-sol-do-amanhecer-sobre-as-montanhas_105940-351.jpg?size=626&ext=jpg");
     background-size: cover;
     width: 100vw;
     height: 100vh;
