--- a/style.css
+++ b/style.css
@@ -17,10 +17,7 @@ body{
     flex-direction: column;
     align-items: center;
     gap: 4rem;
-    background-image: url("https://img.freepik.com/vetores-premium/paisagem-do-sol-do-amanhecer-sobre-as-montanhas_105940-351.jpg?size=626&ext=jpg");
-    background-size: cover;
-    width: 100vw;
-    height: 100vh;
+    font-family: Montserrat
 }
 
 .content{
